--- a/hindi.html
+++ b/hindi.html
@@ -9,6 +9,8 @@
     content="Watch ipl Championship matches online with high-quality streaming. Enjoy live cricket action on ipl Live Streaming. Stream in multiple languages including Hindi, English, and regional languages." />
   <meta name="keywords"
     content="ipl Live Streaming, Star Sports Hindi, Star Sports 4K, FHD Hindi, ipl matches, cricket live streaming, Hindi cricket, regional languages cricket, ipl online, watch ipl, ipl streaming, cricket online" />
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
@@ -31,35 +33,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="playerjs2.js"></script>
   <style>
-    .responsive-link {
-  display: block;
-  max-width: 100%;
-  text-align: center; /* Center the inline(-block) content within the link */
-}
 
-.responsive-link img {
-  display: block; /* Remove extra space */
-  width: 100%;
-  height: auto;
-  margin: 0 auto; /* Center the block-level image horizontally */
-}
-
-@media (min-width: 768px) {
-  .responsive-link img {
-    max-width: 450px;
-  }
-}
-    body {
-      text-align: center;
-    }
-
-    /* Ensure iframes have a default size */
-    iframe {
-      width: 100%;
-      height: 500px;
-      /* Default height, adjust as needed */
-      border: none;
-    }
   </style>
 </head>
 
@@ -76,19 +50,19 @@
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
   </nav>
-<a href="https://lnk.bio/NEWBIENOOB" class="responsive-gif">
-  <img loading="lazy" src="https://i.ibb.co/rGyL1012/output-Oybmvw.gif" alt="Animated GIF"/>
-</a>
-<a href="https://ublockorigin.com/" class="responsive-link">
-  <img loading="lazy" src="https://i.ibb.co/bjNG66z1/2.png" alt="Sample Image" width="350px" height="180" />
-</a>
+  <a href="https://lnk.bio/NEWBIENOOB" class="responsive-gif">
+    <img loading="lazy" src="https://i.ibb.co/rGyL1012/output-Oybmvw.gif" alt="Animated GIF" />
+  </a>
+  <a href="https://ublockorigin.com/" class="responsive-link">
+    <img loading="lazy" src="https://i.ibb.co/bjNG66z1/2.png" alt="Sample Image" width="350px" height="180" />
+  </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
   <h2>pbks vs lsg</h2>
-<hr>
+  <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr> 
+  <hr>
 
   <div id="player"></div>
   <script>
@@ -99,11 +73,37 @@
     });
   </script>
   <br>
+  <h3>to get latest updates of servers</h3>
+ <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i>
+  Join us on Whatsapp chnanel
+</a>
+  
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+</a>
+<br>
+
+  <br>
   <h2>player 2</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
-  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239051&hd=1"  allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-
+  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239051&hd=1"
+    allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0"
+    allowfullscreen></iframe>
+    <br>
+    <h3>to get latest updates of servers</h3>
+   <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+    
+    <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+      <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+      Join us on Telegram chnanel
+  </a>
+  <br>
   <br>
   <h2>player 3</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -112,8 +112,19 @@
   <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
-  </iframe> 
-
+  </iframe>
+  <br>
+  <h3>to get latest updates of servers</h3>
+ <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i>
+  Join us on Whatsapp chnanel
+</a>
+  
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+</a>
+<br>
   <h2>player 4</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
@@ -124,6 +135,18 @@
   </iframe>
   <br>
   <br>
+  <h3>to get latest updates of servers</h3>
+ <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i>
+  Join us on Whatsapp chnanel
+</a>
+  
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+</a>
+<br>
+  <br>
   <h2>player 5</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
@@ -132,7 +155,17 @@
   </iframe>
   <br>
   <br>
-  <br>
+  <h3>to get latest updates of servers</h3>
+ <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i>
+  Join us on Whatsapp chnanel
+</a>
+  
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+</a>
+<br>
   <h2>Player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
@@ -173,6 +206,18 @@
     });
   </script>
   <br>
+  <br>
+  <h3>to get latest updates of servers</h3>
+ <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i>
+  Join us on Whatsapp chnanel
+</a>
+  
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+</a>
+<br>
   <h2>player 7</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
@@ -182,6 +227,18 @@
     loading="lazy">
   </iframe>
   <br>
+  <br>
+  <h3>to get latest updates of servers</h3>
+ <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i>
+  Join us on Whatsapp chnanel
+</a>
+  
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+</a>
+<br>
   <h2>player 8</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
@@ -190,7 +247,18 @@
   </iframe>
   <br>
   <br>
-
+  <h3>to get latest updates of servers</h3>
+ <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i>
+  Join us on Whatsapp chnanel
+</a>
+  
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+</a>
+<br>
+<br>
   <h2>
     Developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>
   </h2>
