--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
     </div>
   </a>
 
+  <br>
+  <h3>to get latest updates of servers</h3>
+ <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-whatsapp"></i>
+  Join us on Whatsapp chnanel
+</a>
   
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+</a>
+<br>
+<br>
   <h2>This website was developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>.</h2>
   <script src="//jwpsrv.com/library/O4mPlqeTEeK_viIACpYGxA.js"></script>
   <script src="script.js"></script>
