--- a/hindi.html
+++ b/hindi.html
@@ -9,8 +9,8 @@
     content="Watch ipl Championship matches online with high-quality streaming. Enjoy live cricket action on ipl Live Streaming. Stream in multiple languages including Hindi, English, and regional languages." />
   <meta name="keywords"
     content="ipl Live Streaming, Star Sports Hindi, Star Sports 4K, FHD Hindi, ipl matches, cricket live streaming, Hindi cricket, regional languages cricket, ipl online, watch ipl, ipl streaming, cricket online" />
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>pbks vs lsg</h2>
+  <h2>rcb vs gt</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -74,16 +74,17 @@
   </script>
   <br>
   <h3>to get latest updates of servers</h3>
- <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-  Join us on Whatsapp chnanel
-</a>
-  
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
   <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
-</a>
-<br>
+  </a>
+  <br>
 
   <br>
   <h2>player 2</h2>
@@ -92,16 +93,17 @@
   <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239051&hd=1"
     allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0"
     allowfullscreen></iframe>
-    <br>
-    <h3>to get latest updates of servers</h3>
-   <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+  <br>
+  <h3>to get latest updates of servers</h3>
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
     <i class="fab fa-whatsapp"></i>
     Join us on Whatsapp chnanel
   </a>
-    
-    <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-      <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-      Join us on Telegram chnanel
+
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
   </a>
   <br>
   <br>
@@ -115,16 +117,17 @@
   </iframe>
   <br>
   <h3>to get latest updates of servers</h3>
- <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-  Join us on Whatsapp chnanel
-</a>
-  
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
   <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
-</a>
-<br>
+  </a>
+  <br>
   <h2>player 4</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
@@ -136,16 +139,17 @@
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
- <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-  Join us on Whatsapp chnanel
-</a>
-  
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
   <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
-</a>
-<br>
+  </a>
+  <br>
   <br>
   <h2>player 5</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -156,16 +160,17 @@
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
- <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-  Join us on Whatsapp chnanel
-</a>
-  
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
   <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
-</a>
-<br>
+  </a>
+  <br>
   <h2>Player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
@@ -208,16 +213,17 @@
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
- <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-  Join us on Whatsapp chnanel
-</a>
-  
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
   <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
-</a>
-<br>
+  </a>
+  <br>
   <h2>player 7</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
@@ -229,16 +235,17 @@
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
- <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-  Join us on Whatsapp chnanel
-</a>
-  
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
   <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
-</a>
-<br>
+  </a>
+  <br>
   <h2>player 8</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
@@ -248,17 +255,18 @@
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
- <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-  Join us on Whatsapp chnanel
-</a>
-  
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
   <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
-</a>
-<br>
-<br>
+  </a>
+  <br>
+  <br>
   <h2>
     Developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>
   </h2>
