--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -49,28 +50,29 @@
   </div>
   <br>
   <a href="http://telegram.dog/NEWBIEN00B" class="card">
-    <img  loading="lazy" src="https://i.ibb.co/MFngWCb/tg.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/MFngWCb/tg.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Telegram</div>
     </div>
   </a>
-  
+
   <a href="https://github.com/NOOBGLITCH" class="card">
-    <img  loading="lazy" src="https://i.pinimg.com/564x/b5/1b/78/b51b78ecc9e5711274931774e433b5e6.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.pinimg.com/564x/b5/1b/78/b51b78ecc9e5711274931774e433b5e6.jpg"
+      alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Github</div>
     </div>
   </a>
 
   <a href="hindi.html" class="card">
-    <img  loading="lazy" src="https://i.ibb.co/YFXpYCFg/x.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/Vp9Czq67/x.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
   </a>
 
   <a href="hindi4k.html" class="card">
-    <img  loading="lazy"  src="https://i.ibb.co/6JpDB1Gr/IPL-2023-Match-37-RR-imresizer.png" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/6JpDB1Gr/IPL-2023-Match-37-RR-imresizer.png" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 2 hindi</div>
     </div>
@@ -78,17 +80,18 @@
 
   <br>
   <h3>to get latest updates of servers</h3>
- <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-  Join us on Whatsapp chnanel
-</a>
-  
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
   <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
-</a>
-<br>
-<br>
+  </a>
+  <br>
+  <br>
   <h2>This website was developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>.</h2>
   <script src="//jwpsrv.com/library/O4mPlqeTEeK_viIACpYGxA.js"></script>
   <script src="script.js"></script>
