--- a/hindi.html
+++ b/hindi.html
@@ -90,7 +90,7 @@
   <h2>player 2</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
-  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239051&hd=1"
+  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239052&hd=1"
     allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0"
     allowfullscreen></iframe>
   <br>
@@ -111,7 +111,29 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
+  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    loading="lazy">
+  </iframe>
+  <br>
+  <h3>to get latest updates of servers</h3>
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+  </a>
+  <br>
+  <br>
+  <h2>player 3</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr>
+
+  <iframe src="new.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
@@ -228,7 +250,7 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
+  <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
