--- a/new.html
+++ b/new.html
@@ -1,65 +1,84 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <script src="playerjs2.js" type="text/javascript"></script>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>noobgltch</title>
+    <link rel="stylesheet" href="https://cxh.pages.dev/style.css">
+</head>
+<body>
     <style>
-      #player {
-        height: 100%;
-        width: 100%;
-        border: 2px solid red;
-        margin: 0;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 9999;
-      }
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
+        #player {
+            position: absolute;
+            width: 100% !important;
+            height: 100% !important;
+        }
     </style>
-  </head>
-  <body>
+
     <div id="player"></div>
 
+    <script src='https://content.jwplatform.com/libraries/KB5zFt7A.js'></script>
+
     <script>
-      var player = new Playerjs({
-        id: "player",
-        file: [
-          {
-            title: "HD Streams",
-            folder: [
-              {
-                title: "Sports18 HD",
-                file: "https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1742761356~acl=/*~hmac=47e826f728d5ef22eabe585c2c2c96fe83aa253c4654cb7723e7fdb27810552b"
-              },
-              {
-                title: "Star Sports 1 Hindi (1080p)",
-                file: "https://vkvsd212.okcdn.ru:443/hls/8304644786830.m3u8/sig/-yS-n-TI3kI/expires/1742797386146/srcIp/92.62.121.164/urls/185.226.55.73/clientType/14/srcAg/CHROME_ANDROID/mid/10216378018702/8304644786830/8304644786830_high/index.m3u8"
-              }
-            ]
-          },
-          {
-            title: "Standard Streams",
-            folder: [
-              {
-                title: "720p Stream",
-                file: "https://vkvsd212.okcdn.ru:443/hls/8304644786830.m3u8/sig/-yS-n-TI3kI/expires/1742797386146/srcIp/92.62.121.164/urls/185.226.55.73/clientType/14/srcAg/CHROME_ANDROID/mid/10216378018702/8304644786830/8304644786830_medium/index.m3u8"
-              },
-              {
-                title: "480p Stream",
-                file: "https://vkvsd212.okcdn.ru:443/hls/8304644786830.m3u8/sig/-yS-n-TI3kI/expires/1742797386146/srcIp/92.62.121.164/urls/185.226.55.73/clientType/14/srcAg/CHROME_ANDROID/mid/10216378018702/8304644786830/8304644786830_low/index.m3u8"
-              },
-              {
-                title: "360p Stream",
-                file: "https://vkvsd212.okcdn.ru:443/hls/8304644786830.m3u8/sig/-yS-n-TI3kI/expires/1742797386146/srcIp/92.62.121.164/urls/185.226.55.73/clientType/14/srcAg/CHROME_ANDROID/mid/10216378018702/8304644786830/8304644786830_lowest/index.m3u8"
-              }
-            ]
-          }
-        ]
-      });
+        var jwScript = document.createElement('script');
+        jwScript.src = "https://content.jwplatform.com/libraries/KB5zFt7A.js";
+        jwScript.async = true;
+        jwScript.onerror = function() {
+            console.error("Failed to load JW Player library.");
+            document.getElementById("player").innerHTML = "<p>Error loading video player.</p>";
+        };
+        document.head.appendChild(jwScript);
+
+        jwScript.onload = function() {
+            var playerInstance = jwplayer("player").setup({
+                file: "https://9361edfe-185f-40b2-8656-2f450faeef7c.deepnoteproject.com/api/star1in.m3u8",
+                width: "100%",
+                height: "100%",
+                aspectratio: '16:9',
+                preload: 'metadata',
+                autostart: false,
+                fallback: {
+                    message: "Your browser does not support the video format or the player."
+                },
+                events: {
+                    error: function(e) {
+                        console.error("JW Player error:", e);
+                        alert("A JW Player error occurred: " + e.message);
+                    }
+                },
+                pip: true,
+                controls: true,
+                title: "star sports 1 eng" // You might want to update the title too
+            });
+
+            playerInstance.on('controls', function(event) {
+                console.log("Controls event:", event);
+            });
+
+            playerInstance.on('displayClick', function(event) {
+                console.log("displayClick event:", event);
+            });
+
+            playerInstance.on('ready', function(event){
+                console.log("player ready", event);
+            })
+
+            playerInstance.on('visualQuality', function(event){
+                console.log("visual quality changed", event);
+            })
+
+            playerInstance.on('bufferChange', function(event){
+                console.log('buffer change', event);
+            })
+
+            playerInstance.on('metaData', function(event){
+                console.log('meta data', event);
+            })
+
+            playerInstance.on('fullScreen', function(event){
+                console.log('full screen event', event);
+            })
+        };
     </script>
-  </body>
+</body>
 </html>
