crichd server added

--- a/hindi.html
+++ b/hindi.html
@@ -58,9 +58,16 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>rcb vs gt</h2>
+  <h2>srh vs kkr</h2>
   <hr>
   <h2>player 1</h2>
+  <br>
+  <iframe src="crichd.html" title="Video Player 2" frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+  loading="lazy">
+</iframe>
+<br>
+  <h2>player 2</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
