--- a/crichd.html
+++ b/crichd.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stream Player</title>
     <style>
-        html, body { margin: 0; padding: 0; height: 100%; overflow: hidden; font-family: sans-serif; }
-        #player { position: absolute; width: 100% !important; height: 100% !important; }
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            font-family: sans-serif;
+        }
+
+        #player {
+            position: absolute;
+            width: 100% !important;
+            height: 100% !important;
+        }
     </style>
 </head>
+
 <body>
 
     <div id="player"></div>
@@ -101,4 +115,5 @@
     </script>
 
 </body>
+
 </html>
