--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/rfXyCNr0/srh-vskkr.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/KzwDBfYH/mivs-lsg.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
